// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Line renders correctly 1`] = `
<SteppedLineTo
  className=""
  from={
    Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 0,
    }
  }
  offset={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  orientation="v"
  style={Object {}}
  to={
    Object {
      "height": 0,
      "left": 100,
      "top": 0,
      "width": 0,
    }
  }
>
  <div
    className="stepped-line-to"
  >
    <SteppedLine
      className=""
      from={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
      offset={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      orientation="v"
      style={Object {}}
      to={
        Object {
          "height": 0,
          "left": 100,
          "top": 0,
          "width": 0,
        }
      }
      x0={0}
      x1={100}
      y0={0}
      y1={0}
    >
      <div
        className="stepped-lineto"
      >
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={0}
          x1={0}
          y0={0}
          y1={0}
        >
          <div
            className="line-placeholder"
          >
            <div
              className="line-placeholder-item"
              from={
                Object {
                  "height": 0,
                  "left": 0,
                  "top": 0,
                  "width": 0,
                }
              }
              offset={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              orientation="v"
              style={
                Object {
                  "borderTopColor": "#ddd",
                  "borderTopStyle": "solid",
                  "borderTopWidth": 1,
                  "left": "0px",
                  "position": "absolute",
                  "top": "0px",
                  "transform": "rotate(0deg)",
                  "transformOrigin": "0 0",
                  "width": "0px",
                  "zIndex": "1",
                }
              }
              to={
                Object {
                  "height": 0,
                  "left": 100,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={100}
          x1={100}
          y0={0}
          y1={0}
        >
          <div
            className="line-placeholder"
          >
            <div
              className="line-placeholder-item"
              from={
                Object {
                  "height": 0,
                  "left": 0,
                  "top": 0,
                  "width": 0,
                }
              }
              offset={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              orientation="v"
              style={
                Object {
                  "borderTopColor": "#ddd",
                  "borderTopStyle": "solid",
                  "borderTopWidth": 1,
                  "left": "100px",
                  "position": "absolute",
                  "top": "0px",
                  "transform": "rotate(0deg)",
                  "transformOrigin": "0 0",
                  "width": "0px",
                  "zIndex": "1",
                }
              }
              to={
                Object {
                  "height": 0,
                  "left": 100,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 0,
              "y": 0,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={-1}
          x1={100}
          y0={0}
          y1={0}
        >
          <div
            className="line-placeholder"
          >
            <div
              className="line-placeholder-item"
              from={
                Object {
                  "height": 0,
                  "left": 0,
                  "top": 0,
                  "width": 0,
                }
              }
              offset={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              orientation="v"
              style={
                Object {
                  "borderTopColor": "#ddd",
                  "borderTopStyle": "solid",
                  "borderTopWidth": 1,
                  "left": "-1px",
                  "position": "absolute",
                  "top": "0px",
                  "transform": "rotate(0deg)",
                  "transformOrigin": "0 0",
                  "width": "101px",
                  "zIndex": "1",
                }
              }
              to={
                Object {
                  "height": 0,
                  "left": 100,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </Line>
      </div>
    </SteppedLine>
  </div>
</SteppedLineTo>
`;

exports[`Line offset works well 1`] = `
<SteppedLineTo
  className=""
  from={
    Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 0,
    }
  }
  offset={
    Object {
      "x": 100,
      "y": 100,
    }
  }
  orientation="v"
  style={Object {}}
  to={
    Object {
      "height": 0,
      "left": 100,
      "top": 0,
      "width": 0,
    }
  }
>
  <div
    className="stepped-line-to"
  >
    <SteppedLine
      className=""
      from={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
      offset={
        Object {
          "x": 100,
          "y": 100,
        }
      }
      orientation="v"
      style={Object {}}
      to={
        Object {
          "height": 0,
          "left": 100,
          "top": 0,
          "width": 0,
        }
      }
      x0={-100}
      x1={0}
      y0={-100}
      y1={-100}
    >
      <div
        className="stepped-lineto"
      >
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 100,
              "y": 100,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={-100}
          x1={-100}
          y0={-100}
          y1={-100}
        >
          <div
            className="line-placeholder"
          >
            <div
              className="line-placeholder-item"
              from={
                Object {
                  "height": 0,
                  "left": 0,
                  "top": 0,
                  "width": 0,
                }
              }
              offset={
                Object {
                  "x": 100,
                  "y": 100,
                }
              }
              orientation="v"
              style={
                Object {
                  "borderTopColor": "#ddd",
                  "borderTopStyle": "solid",
                  "borderTopWidth": 1,
                  "left": "-100px",
                  "position": "absolute",
                  "top": "-100px",
                  "transform": "rotate(0deg)",
                  "transformOrigin": "0 0",
                  "width": "0px",
                  "zIndex": "1",
                }
              }
              to={
                Object {
                  "height": 0,
                  "left": 100,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 100,
              "y": 100,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={0}
          x1={0}
          y0={-100}
          y1={-100}
        >
          <div
            className="line-placeholder"
          >
            <div
              className="line-placeholder-item"
              from={
                Object {
                  "height": 0,
                  "left": 0,
                  "top": 0,
                  "width": 0,
                }
              }
              offset={
                Object {
                  "x": 100,
                  "y": 100,
                }
              }
              orientation="v"
              style={
                Object {
                  "borderTopColor": "#ddd",
                  "borderTopStyle": "solid",
                  "borderTopWidth": 1,
                  "left": "0px",
                  "position": "absolute",
                  "top": "-100px",
                  "transform": "rotate(0deg)",
                  "transformOrigin": "0 0",
                  "width": "0px",
                  "zIndex": "1",
                }
              }
              to={
                Object {
                  "height": 0,
                  "left": 100,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </Line>
        <Line
          className=""
          from={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
          offset={
            Object {
              "x": 100,
              "y": 100,
            }
          }
          orientation="v"
          style={Object {}}
          to={
            Object {
              "height": 0,
              "left": 100,
              "top": 0,
              "width": 0,
            }
          }
          x0={-101}
          x1={0}
          y0={-100}
          y1={-100}
        >
          <div
            className="line-placeholder"
          >
            <div
              className="line-placeholder-item"
              from={
                Object {
                  "height": 0,
                  "left": 0,
                  "top": 0,
                  "width": 0,
                }
              }
              offset={
                Object {
                  "x": 100,
                  "y": 100,
                }
              }
              orientation="v"
              style={
                Object {
                  "borderTopColor": "#ddd",
                  "borderTopStyle": "solid",
                  "borderTopWidth": 1,
                  "left": "-101px",
                  "position": "absolute",
                  "top": "-100px",
                  "transform": "rotate(0deg)",
                  "transformOrigin": "0 0",
                  "width": "101px",
                  "zIndex": "1",
                }
              }
              to={
                Object {
                  "height": 0,
                  "left": 100,
                  "top": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </Line>
      </div>
    </SteppedLine>
  </div>
</SteppedLineTo>
`;
